# atlas_of_us

./: .gitignore  CLAUDE.md
apis/: README.md
apis/aou_api/: CLAUDE.md  Dockerfile  deploy-ec2.sh  deploy.sh  docker-compose.yml  go.mod  go.sum  main.go  run_embeddings_locally.sh  run_llm_locally.sh
apis/atlas_domain_worker/: Cargo.toml  PROBLEMS.md  deploy.sh
apis/atlas_domain_worker/src/: config.rs  handler.rs  lib.rs  main.rs
apis/atlas_domain_worker/src/messages/: mod.rs  node_job.rs
apis/atlas_domain_worker/src/processors/: common.rs  knowledge.rs  milestone.rs  mod.rs  skill.rs  trait_proc.rs
apis/atlas_domain_worker/src/services/: embedding.rs  llm.rs  mod.rs  similarity.rs
apis/atlas_of_us_rest_api/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  deploy-ec2.sh  docker-compose.yml
apis/atlas_of_us_rest_api/src/: main.rs
apis/atlas_of_us_rest_api/src/common/: embedding.rs  handlers.rs  image_generation.rs  logging_middleware.rs  mod.rs  neo4j_utils.rs  s3.rs  similarity.rs  sqs.rs
apis/atlas_of_us_rest_api/src/config/: mod.rs
apis/atlas_of_us_rest_api/src/domains/: mod.rs
apis/atlas_of_us_rest_api/src/domains/agent/: handlers.rs  mod.rs  models.rs  orchestrator.rs
apis/atlas_of_us_rest_api/src/domains/agent/documentation/: traits.md
apis/atlas_of_us_rest_api/src/domains/agent/llm/: claude.rs  llama_cpp.rs  mod.rs  provider.rs
apis/atlas_of_us_rest_api/src/domains/agent/prompts/: mod.rs  templates.rs
apis/atlas_of_us_rest_api/src/domains/agent/steps/: domain_architect.rs  knowledge_generator.rs  level_distributor.rs  milestone_generator.rs  mod.rs  prerequisite_mapper.rs  relationship_mapper.rs  skill_generator.rs  trait_generator.rs
apis/atlas_of_us_rest_api/src/domains/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  services.rs  utils.rs
apis/atlas_of_us_rest_api/src/domains/graph/: handlers.rs  mod.rs  models.rs  services.rs
apis/atlas_of_us_rest_api/src/domains/graph/services/: domain.rs  mod.rs  node.rs  relationship.rs  search.rs
apis/atlas_of_us_rest_api/src/domains/profile/: handlers.rs  mod.rs  models.rs  services.rs
apis/atlas_of_us_rest_api/src/error/: mod.rs
apis/atlas_of_us_rest_api/src/router/: mod.rs
apis/embeddings_api/: Dockerfile  README.md  deploy-ec2.sh  docker-compose.yml
apis/image_gen_api/: .dockerignore  Dockerfile  README.md  deploy-ec2.sh  docker-compose.yml  requirements.txt
apis/llm_api/: Dockerfile  README.md  (+2 more)
batch_jobs/: .gitignore
database/: CLAUDE.md  README.md
infrastructure/: .gitignore  .terraform.lock.hcl  CLAUDE.md  README.md  api-gateway-lambda-stack.tf  api-server-key.pub  domain-worker.tf  ec2-server.tf  embeddings-api.tf  image-gen-api.tf  image-gen-api.tf.bk  image-gen-queue.tf  lambda-scheduler.tf  llm-api.tf  locals.tf  terraform.tfstate  terraform.tfstate.backup  version.tf  website_hosting.tf
ui/: index.html  package-lock.json  package.json  tsconfig.json
(+370 files in other folders)
