[package]
name = "atlas_domain_worker"
version = "0.1.0"
edition = "2024"
description = "Lambda worker for async domain node generation"
authors = ["Atlas of Us"]

[dependencies]
# Lambda runtime
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs"] }

# AWS SDK
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.0"

# Database
neo4rs = "0.9.0-rc.8"

# Async
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for LLM/embedding calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
