[package]
name = "atlas_of_us_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum = { version = "0.8.3", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
neo4rs = "0.8.0"
otel-instrumentation-neo4jrs = "0.1"
opentelemetry = "0.30"
tracing = "0.1"
tower-http = { version = "0.6.6", features = ["cors"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
