[package]
name = "atlas_of_us_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum = { version = "0.8.3", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
neo4rs = "0.9.0-rc.8"
otel-instrumentation-neo4jrs = "0.1"
opentelemetry = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["cors"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aws-config = { version = "1.0", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1.0", features = ["rustls"] }
aws-smithy-types = "1.0"
infer = "0.16"
rustls = { version = "0.23", features = ["ring"] }
